--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
   "dependencies": {
     "@angular-ru/cdk": "18.7.0",
     "@angular-ru/ngxs": "18.7.0",
-    "@angular/animations": "18.2.0",
-    "@angular/cdk": "18.2.0",
-    "@angular/common": "18.2.0",
-    "@angular/compiler": "18.2.0",
-    "@angular/core": "18.2.0",
-    "@angular/forms": "18.2.0",
-    "@angular/platform-browser": "18.2.0",
-    "@angular/platform-browser-dynamic": "18.2.0",
-    "@angular/router": "18.2.0",
+    "@angular/animations": "18.2.4",
+    "@angular/cdk": "18.2.4",
+    "@angular/common": "18.2.4",
+    "@angular/compiler": "18.2.4",
+    "@angular/core": "18.2.4",
+    "@angular/forms": "18.2.4",
+    "@angular/platform-browser": "18.2.4",
+    "@angular/platform-browser-dynamic": "18.2.4",
+    "@angular/router": "18.2.4",
     "@capacitor/app": "6.0.1",
     "@capacitor/core": "6.1.2",
     "@capawesome/capacitor-file-picker": "6.0.1",
-    "@ionic/angular": "8.2.7",
+    "@ionic/angular": "8.3.0",
     "@maskito/angular": "3.0.1",
     "@maskito/core": "3.0.1",
     "@ngx-translate/core": "^15.0.0",
@@ -37,19 +37,19 @@
     "storybook": "^8.2.8",
     "swiper": "^11.0.1",
     "tslib": "^2.6.2",
-    "zone.js": "0.14.10"
+    "zone.js": "^0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "18.2.0",
-    "@angular-devkit/core": "18.2.0",
-    "@angular-devkit/schematics": "18.2.0",
-    "@angular-eslint/eslint-plugin": "18.3.0",
-    "@angular-eslint/eslint-plugin-template": "18.3.0",
-    "@angular-eslint/template-parser": "18.3.0",
-    "@angular/cli": "18.2.0",
-    "@angular/compiler-cli": "18.2.0",
-    "@angular/language-service": "18.2.0",
-    "@chromatic-com/storybook": "^1.6.1",
+    "@angular-devkit/build-angular": "18.2.4",
+    "@angular-devkit/core": "18.2.4",
+    "@angular-devkit/schematics": "18.2.4",
+    "@angular-eslint/eslint-plugin": "18.3.1",
+    "@angular-eslint/eslint-plugin-template": "18.3.1",
+    "@angular-eslint/template-parser": "18.3.1",
+    "@angular/cli": "18.2.4",
+    "@angular/compiler-cli": "18.2.4",
+    "@angular/language-service": "18.2.4",
+    "@chromatic-com/storybook": "2.0.2",
     "@compodoc/compodoc": "^1.1.24",
     "@ngxs/devtools-plugin": "18.1.1",
     "@nx/cypress": "19.7.3",
@@ -60,38 +60,38 @@
     "@nx/storybook": "19.7.3",
     "@nx/web": "19.7.3",
     "@nx/workspace": "19.7.3",
-    "@schematics/angular": "18.2.0",
-    "@storybook/addon-essentials": "8.2.9",
-    "@storybook/addon-interactions": "8.2.9",
-    "@storybook/angular": "8.2.9",
-    "@storybook/core-server": "8.2.9",
+    "@schematics/angular": "18.2.4",
+    "@storybook/addon-essentials": "8.3.1",
+    "@storybook/addon-interactions": "8.3.1",
+    "@storybook/angular": "8.3.1",
+    "@storybook/core-server": "8.3.1",
     "@storybook/test": "^8.2.9",
     "@storybook/test-runner": "0.19.1",
     "@swc-node/register": "1.10.9",
-    "@swc/core": "1.7.12",
-    "@types/jest": "29.5.12",
-    "@types/node": "22.4.1",
+    "@swc/core": "1.7.26",
+    "@types/jest": "29.5.13",
+    "@types/node": "22.5.5",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "@typescript-eslint/utils": "^7.0.0",
     "autoprefixer": "^10.4.0",
-    "cypress": "13.13.3",
+    "cypress": "13.14.2",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "3.5.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "jest-preset-angular": "14.2.2",
+    "jest-preset-angular": "14.2.4",
     "jsonc-eslint-parser": "^2.1.0",
-    "ng-packagr": "18.2.0",
+    "ng-packagr": "18.2.1",
     "nx": "19.7.3",
     "postcss": "^8.4.31",
     "postcss-import": "16.1.0",
-    "postcss-preset-env": "10.0.2",
+    "postcss-preset-env": "10.0.3",
     "postcss-url": "~10.1.3",
     "prettier": "^3.0.3",
-    "ts-jest": "29.2.4",
+    "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
-    "typescript": "5.5.4"
+    "typescript": "^5.5"
   }
 }
