--- a/package.json
+++ b/package.json
@@ -5,31 +5,31 @@
   "scripts": {},
   "private": false,
   "dependencies": {
-    "@angular-ru/cdk": "18.7.0",
-    "@angular-ru/ngxs": "18.7.0",
-    "@angular/animations": "18.2.4",
-    "@angular/cdk": "18.2.4",
-    "@angular/common": "18.2.4",
-    "@angular/compiler": "18.2.4",
-    "@angular/core": "18.2.4",
-    "@angular/forms": "18.2.4",
-    "@angular/platform-browser": "18.2.4",
-    "@angular/platform-browser-dynamic": "18.2.4",
-    "@angular/router": "18.2.4",
+    "@angular-ru/cdk": "18.8.0",
+    "@angular-ru/ngxs": "18.8.0",
+    "@angular/animations": "18.2.10",
+    "@angular/cdk": "18.2.10",
+    "@angular/common": "18.2.10",
+    "@angular/compiler": "18.2.10",
+    "@angular/core": "18.2.10",
+    "@angular/forms": "18.2.10",
+    "@angular/platform-browser": "18.2.10",
+    "@angular/platform-browser-dynamic": "18.2.10",
+    "@angular/router": "18.2.10",
     "@capacitor/app": "6.0.1",
     "@capacitor/core": "6.1.2",
-    "@capawesome/capacitor-file-picker": "6.0.1",
-    "@ionic/angular": "8.3.1",
-    "@maskito/angular": "3.0.1",
-    "@maskito/core": "3.0.1",
+    "@capawesome/capacitor-file-picker": "6.1.0",
+    "@ionic/angular": "8.3.4",
+    "@maskito/angular": "3.2.0",
+    "@maskito/core": "3.2.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
-    "@ngxs/form-plugin": "18.1.1",
-    "@ngxs/logger-plugin": "18.1.1",
-    "@ngxs/router-plugin": "18.1.1",
-    "@ngxs/store": "18.1.1",
-    "@nx/angular": "19.7.3",
-    "appwrite": "15.0.0",
+    "@ngxs/form-plugin": "18.1.4",
+    "@ngxs/logger-plugin": "18.1.4",
+    "@ngxs/router-plugin": "18.1.4",
+    "@ngxs/store": "18.1.4",
+    "@nx/angular": "20.0.6",
+    "appwrite": "16.0.2",
     "ngx-translate-debug": "^0.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -37,57 +37,57 @@
     "storybook": "^8.2.8",
     "swiper": "^11.0.1",
     "tslib": "^2.6.2",
-    "zone.js": "^0.14.10"
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "18.2.4",
-    "@angular-devkit/core": "18.2.4",
-    "@angular-devkit/schematics": "18.2.4",
-    "@angular-eslint/eslint-plugin": "18.3.1",
-    "@angular-eslint/eslint-plugin-template": "18.3.1",
-    "@angular-eslint/template-parser": "18.3.1",
-    "@angular/cli": "18.2.4",
-    "@angular/compiler-cli": "18.2.4",
-    "@angular/language-service": "18.2.4",
-    "@chromatic-com/storybook": "2.0.2",
+    "@angular-devkit/build-angular": "18.2.11",
+    "@angular-devkit/core": "18.2.11",
+    "@angular-devkit/schematics": "18.2.11",
+    "@angular-eslint/eslint-plugin": "18.4.0",
+    "@angular-eslint/eslint-plugin-template": "18.4.0",
+    "@angular-eslint/template-parser": "18.4.0",
+    "@angular/cli": "18.2.11",
+    "@angular/compiler-cli": "18.2.10",
+    "@angular/language-service": "18.2.10",
+    "@chromatic-com/storybook": "3.2.1",
     "@compodoc/compodoc": "^1.1.24",
-    "@ngxs/devtools-plugin": "18.1.1",
-    "@nx/cypress": "19.7.3",
-    "@nx/eslint": "19.7.3",
-    "@nx/eslint-plugin": "19.7.3",
-    "@nx/jest": "19.7.3",
-    "@nx/js": "19.7.3",
-    "@nx/storybook": "19.7.3",
-    "@nx/web": "19.7.3",
-    "@nx/workspace": "19.7.3",
-    "@schematics/angular": "18.2.4",
-    "@storybook/addon-essentials": "8.3.1",
-    "@storybook/addon-interactions": "8.3.1",
-    "@storybook/angular": "8.3.1",
-    "@storybook/core-server": "8.3.1",
+    "@ngxs/devtools-plugin": "18.1.4",
+    "@nx/cypress": "20.0.6",
+    "@nx/eslint": "20.0.6",
+    "@nx/eslint-plugin": "20.0.6",
+    "@nx/jest": "20.0.6",
+    "@nx/js": "20.0.6",
+    "@nx/storybook": "20.0.6",
+    "@nx/web": "20.0.6",
+    "@nx/workspace": "20.0.6",
+    "@schematics/angular": "18.2.11",
+    "@storybook/addon-essentials": "8.4.0",
+    "@storybook/addon-interactions": "8.4.0",
+    "@storybook/angular": "8.4.0",
+    "@storybook/core-server": "8.4.0",
     "@storybook/test": "^8.2.9",
     "@storybook/test-runner": "0.19.1",
     "@swc-node/register": "1.10.9",
-    "@swc/core": "1.7.26",
-    "@types/jest": "29.5.13",
-    "@types/node": "22.5.5",
-    "@typescript-eslint/eslint-plugin": "^7",
-    "@typescript-eslint/parser": "^7",
-    "@typescript-eslint/utils": "^7",
+    "@swc/core": "1.7.42",
+    "@types/jest": "29.5.14",
+    "@types/node": "22.8.5",
+    "@typescript-eslint/eslint-plugin": "8.12.2",
+    "@typescript-eslint/parser": "8.12.2",
+    "@typescript-eslint/utils": "8.12.2",
     "autoprefixer": "^10.4.0",
-    "cypress": "13.14.2",
-    "eslint": "^8",
+    "cypress": "13.15.1",
+    "eslint": "9.13.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-cypress": "3.5.0",
+    "eslint-plugin-cypress": "4.1.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-preset-angular": "14.2.4",
     "jsonc-eslint-parser": "^2.1.0",
     "ng-packagr": "18.2.1",
-    "nx": "19.7.3",
+    "nx": "20.0.6",
     "postcss": "^8.4.31",
     "postcss-import": "16.1.0",
-    "postcss-preset-env": "10.0.3",
+    "postcss-preset-env": "10.0.8",
     "postcss-url": "~10.1.3",
     "prettier": "^3.0.3",
     "ts-jest": "29.2.5",
