--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@angular-ru/cdk": "18.8.0",
     "@angular-ru/ngxs": "18.8.0",
     "@angular/animations": "18.2.10",
-    "@angular/cdk": "18.2.10",
+    "@angular/cdk": "18.2.11",
     "@angular/common": "18.2.10",
     "@angular/compiler": "18.2.10",
     "@angular/core": "18.2.10",
@@ -22,13 +22,13 @@
     "@ionic/angular": "8.3.4",
     "@maskito/angular": "3.2.0",
     "@maskito/core": "3.2.0",
-    "@ngx-translate/core": "^15.0.0",
-    "@ngx-translate/http-loader": "^8.0.0",
+    "@ngx-translate/core": "16.0.3",
+    "@ngx-translate/http-loader": "16.0.0",
     "@ngxs/form-plugin": "18.1.4",
     "@ngxs/logger-plugin": "18.1.4",
     "@ngxs/router-plugin": "18.1.4",
     "@ngxs/store": "18.1.4",
-    "@nx/angular": "20.0.6",
+    "@nx/angular": "20.0.8",
     "appwrite": "16.0.2",
     "ngx-translate-debug": "^0.1.4",
     "react": "^18.2.0",
@@ -49,34 +49,34 @@
     "@angular/cli": "18.2.11",
     "@angular/compiler-cli": "18.2.10",
     "@angular/language-service": "18.2.10",
-    "@chromatic-com/storybook": "3.2.1",
+    "@chromatic-com/storybook": "3.2.2",
     "@compodoc/compodoc": "^1.1.24",
     "@ngxs/devtools-plugin": "18.1.4",
-    "@nx/cypress": "20.0.6",
-    "@nx/eslint": "20.0.6",
-    "@nx/eslint-plugin": "20.0.6",
-    "@nx/jest": "20.0.6",
-    "@nx/js": "20.0.6",
-    "@nx/storybook": "20.0.6",
-    "@nx/web": "20.0.6",
-    "@nx/workspace": "20.0.6",
+    "@nx/cypress": "20.0.8",
+    "@nx/eslint": "20.0.8",
+    "@nx/eslint-plugin": "20.0.8",
+    "@nx/jest": "20.0.8",
+    "@nx/js": "20.0.8",
+    "@nx/storybook": "20.0.8",
+    "@nx/web": "20.0.8",
+    "@nx/workspace": "20.0.8",
     "@schematics/angular": "18.2.11",
-    "@storybook/addon-essentials": "8.4.0",
-    "@storybook/addon-interactions": "8.4.0",
-    "@storybook/angular": "8.4.0",
-    "@storybook/core-server": "8.4.0",
+    "@storybook/addon-essentials": "8.4.1",
+    "@storybook/addon-interactions": "8.4.1",
+    "@storybook/angular": "8.4.1",
+    "@storybook/core-server": "8.4.1",
     "@storybook/test": "^8.2.9",
     "@storybook/test-runner": "0.19.1",
     "@swc-node/register": "1.10.9",
-    "@swc/core": "1.7.42",
+    "@swc/core": "1.8.0",
     "@types/jest": "29.5.14",
-    "@types/node": "22.8.5",
+    "@types/node": "22.8.7",
     "@typescript-eslint/eslint-plugin": "8.12.2",
     "@typescript-eslint/parser": "8.12.2",
     "@typescript-eslint/utils": "8.12.2",
     "autoprefixer": "^10.4.0",
     "cypress": "13.15.1",
-    "eslint": "9.13.0",
+    "eslint": "9.14.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "4.1.0",
     "jest": "29.7.0",
@@ -84,10 +84,10 @@
     "jest-preset-angular": "14.2.4",
     "jsonc-eslint-parser": "^2.1.0",
     "ng-packagr": "18.2.1",
-    "nx": "20.0.6",
+    "nx": "20.0.8",
     "postcss": "^8.4.31",
     "postcss-import": "16.1.0",
-    "postcss-preset-env": "10.0.8",
+    "postcss-preset-env": "10.0.9",
     "postcss-url": "~10.1.3",
     "prettier": "^3.0.3",
     "ts-jest": "29.2.5",
