--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@capacitor/app": "6.0.1",
     "@capacitor/core": "6.1.2",
     "@capawesome/capacitor-file-picker": "6.1.0",
-    "@ionic/angular": "8.3.4",
+    "@ionic/angular": "8.4.0",
     "@maskito/angular": "3.2.0",
     "@maskito/core": "3.2.0",
     "@ngx-translate/core": "16.0.3",
@@ -49,6 +49,7 @@
     "@angular/cli": "18.2.11",
     "@angular/compiler-cli": "18.2.10",
     "@angular/language-service": "18.2.10",
+    "@capacitor/cli": "6.1.2",
     "@chromatic-com/storybook": "3.2.2",
     "@compodoc/compodoc": "^1.1.24",
     "@ngxs/devtools-plugin": "18.1.4",
@@ -61,19 +62,19 @@
     "@nx/web": "20.0.8",
     "@nx/workspace": "20.0.8",
     "@schematics/angular": "18.2.11",
-    "@storybook/addon-essentials": "8.4.1",
-    "@storybook/addon-interactions": "8.4.1",
-    "@storybook/angular": "8.4.1",
-    "@storybook/core-server": "8.4.1",
-    "@storybook/test": "^8.2.9",
+    "@storybook/addon-essentials": "8.4.2",
+    "@storybook/addon-interactions": "8.4.2",
+    "@storybook/angular": "8.4.2",
+    "@storybook/core-server": "8.4.2",
+    "@storybook/test": "8.4.2",
     "@storybook/test-runner": "0.19.1",
     "@swc-node/register": "1.10.9",
     "@swc/core": "1.8.0",
     "@types/jest": "29.5.14",
-    "@types/node": "22.8.7",
-    "@typescript-eslint/eslint-plugin": "8.12.2",
-    "@typescript-eslint/parser": "8.12.2",
-    "@typescript-eslint/utils": "8.12.2",
+    "@types/node": "22.9.0",
+    "@typescript-eslint/eslint-plugin": "8.13.0",
+    "@typescript-eslint/parser": "8.13.0",
+    "@typescript-eslint/utils": "8.13.0",
     "autoprefixer": "^10.4.0",
     "cypress": "13.15.1",
     "eslint": "9.14.0",
@@ -92,6 +93,6 @@
     "prettier": "^3.0.3",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
-    "typescript": "^5.5"
+    "typescript": "5.5.4"
   }
 }
