--- a/package.json
+++ b/package.json
@@ -5,94 +5,94 @@
   "scripts": {},
   "private": false,
   "dependencies": {
-    "@angular-ru/cdk": "18.8.0",
-    "@angular-ru/ngxs": "18.8.0",
-    "@angular/animations": "18.2.10",
-    "@angular/cdk": "18.2.11",
-    "@angular/common": "18.2.10",
-    "@angular/compiler": "18.2.10",
-    "@angular/core": "18.2.10",
-    "@angular/forms": "18.2.10",
-    "@angular/platform-browser": "18.2.10",
-    "@angular/platform-browser-dynamic": "18.2.10",
-    "@angular/router": "18.2.10",
-    "@capacitor/app": "6.0.1",
-    "@capacitor/core": "6.1.2",
-    "@capawesome/capacitor-file-picker": "6.1.0",
-    "@ionic/angular": "8.4.0",
-    "@maskito/angular": "3.2.0",
-    "@maskito/core": "3.2.0",
-    "@ngx-translate/core": "16.0.3",
-    "@ngx-translate/http-loader": "16.0.0",
-    "@ngxs/form-plugin": "18.1.4",
-    "@ngxs/logger-plugin": "18.1.4",
-    "@ngxs/router-plugin": "18.1.4",
-    "@ngxs/store": "18.1.4",
-    "@nx/angular": "20.0.8",
-    "appwrite": "16.0.2",
+    "@angular-ru/cdk": "18.10.0",
+    "@angular-ru/ngxs": "18.10.0",
+    "@angular/animations": "19.1.6",
+    "@angular/cdk": "19.1.4",
+    "@angular/common": "19.1.6",
+    "@angular/compiler": "19.1.6",
+    "@angular/core": "19.1.6",
+    "@angular/forms": "19.1.6",
+    "@angular/platform-browser": "19.1.6",
+    "@angular/platform-browser-dynamic": "19.1.6",
+    "@angular/router": "19.1.6",
+    "@capacitor/app": "7.0.0",
+    "@capacitor/core": "7.0.1",
+    "@capawesome/capacitor-file-picker": "7.0.1",
+    "@ionic/angular": "8.4.3",
+    "@maskito/angular": "3.2.1",
+    "@maskito/core": "3.2.1",
+    "@ngx-translate/core": "16.0.4",
+    "@ngx-translate/http-loader": "16.0.1",
+    "@ngxs/form-plugin": "19.0.0",
+    "@ngxs/logger-plugin": "19.0.0",
+    "@ngxs/router-plugin": "19.0.0",
+    "@ngxs/store": "19.0.0",
+    "@nx/angular": "20.4.3",
+    "appwrite": "17.0.0",
     "ngx-translate-debug": "^0.1.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "rxjs": "~7.8.1",
     "storybook": "^8.2.8",
     "swiper": "^11.0.1",
     "tslib": "^2.6.2",
-    "zone.js": "~0.14.10"
+    "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "18.2.11",
-    "@angular-devkit/core": "18.2.11",
-    "@angular-devkit/schematics": "18.2.11",
-    "@angular-eslint/eslint-plugin": "18.4.0",
-    "@angular-eslint/eslint-plugin-template": "18.4.0",
-    "@angular-eslint/template-parser": "18.4.0",
-    "@angular/cli": "18.2.11",
-    "@angular/compiler-cli": "18.2.10",
-    "@angular/language-service": "18.2.10",
-    "@capacitor/cli": "6.1.2",
-    "@chromatic-com/storybook": "3.2.2",
+    "@angular-devkit/build-angular": "19.1.7",
+    "@angular-devkit/core": "19.1.7",
+    "@angular-devkit/schematics": "19.1.7",
+    "@angular-eslint/eslint-plugin": "19.1.0",
+    "@angular-eslint/eslint-plugin-template": "19.1.0",
+    "@angular-eslint/template-parser": "19.1.0",
+    "@angular/cli": "19.1.7",
+    "@angular/compiler-cli": "19.1.6",
+    "@angular/language-service": "19.1.6",
+    "@capacitor/cli": "7.0.1",
+    "@chromatic-com/storybook": "3.2.4",
     "@compodoc/compodoc": "^1.1.24",
-    "@ngxs/devtools-plugin": "18.1.4",
-    "@nx/cypress": "20.0.8",
-    "@nx/eslint": "20.0.8",
-    "@nx/eslint-plugin": "20.0.8",
-    "@nx/jest": "20.0.8",
-    "@nx/js": "20.0.8",
-    "@nx/storybook": "20.0.8",
-    "@nx/web": "20.0.8",
-    "@nx/workspace": "20.0.8",
-    "@schematics/angular": "18.2.11",
-    "@storybook/addon-essentials": "8.4.2",
-    "@storybook/addon-interactions": "8.4.2",
-    "@storybook/angular": "8.4.2",
-    "@storybook/core-server": "8.4.2",
-    "@storybook/test": "8.4.2",
-    "@storybook/test-runner": "0.19.1",
+    "@ngxs/devtools-plugin": "19.0.0",
+    "@nx/cypress": "20.4.3",
+    "@nx/eslint": "20.4.3",
+    "@nx/eslint-plugin": "20.4.3",
+    "@nx/jest": "20.4.3",
+    "@nx/js": "20.4.3",
+    "@nx/storybook": "20.4.3",
+    "@nx/web": "20.4.3",
+    "@nx/workspace": "20.4.3",
+    "@schematics/angular": "19.1.7",
+    "@storybook/addon-essentials": "8.5.5",
+    "@storybook/addon-interactions": "8.5.5",
+    "@storybook/angular": "8.5.5",
+    "@storybook/core-server": "8.5.5",
+    "@storybook/test": "8.5.5",
+    "@storybook/test-runner": "0.21.0",
     "@swc-node/register": "1.10.9",
-    "@swc/core": "1.8.0",
+    "@swc/core": "1.10.16",
     "@types/jest": "29.5.14",
-    "@types/node": "22.9.0",
-    "@typescript-eslint/eslint-plugin": "8.13.0",
-    "@typescript-eslint/parser": "8.13.0",
-    "@typescript-eslint/utils": "8.13.0",
+    "@types/node": "22.13.2",
+    "@typescript-eslint/eslint-plugin": "8.24.0",
+    "@typescript-eslint/parser": "8.24.0",
+    "@typescript-eslint/utils": "8.24.0",
     "autoprefixer": "^10.4.0",
-    "cypress": "13.15.1",
-    "eslint": "9.14.0",
-    "eslint-config-prettier": "9.1.0",
+    "cypress": "^13.0.3",
+    "eslint": "9.20.1",
+    "eslint-config-prettier": "^9",
     "eslint-plugin-cypress": "4.1.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "jest-preset-angular": "14.2.4",
+    "jest-preset-angular": "14.5.1",
     "jsonc-eslint-parser": "^2.1.0",
-    "ng-packagr": "18.2.1",
-    "nx": "20.0.8",
+    "ng-packagr": "19.1.2",
+    "nx": "20.4.3",
     "postcss": "^8.4.31",
     "postcss-import": "16.1.0",
-    "postcss-preset-env": "10.0.9",
+    "postcss-preset-env": "10.1.4",
     "postcss-url": "~10.1.3",
     "prettier": "^3.0.3",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
-    "typescript": "5.5.4"
+    "typescript": "5.7.3"
   }
 }
