--- a/package.json
+++ b/package.json
@@ -7,28 +7,28 @@
   "dependencies": {
     "@angular-ru/cdk": "18.10.0",
     "@angular-ru/ngxs": "18.10.0",
-    "@angular/animations": "19.1.6",
-    "@angular/cdk": "19.1.4",
-    "@angular/common": "19.1.6",
-    "@angular/compiler": "19.1.6",
-    "@angular/core": "19.1.6",
-    "@angular/forms": "19.1.6",
-    "@angular/platform-browser": "19.1.6",
-    "@angular/platform-browser-dynamic": "19.1.6",
-    "@angular/router": "19.1.6",
+    "@angular/animations": "19.2.0",
+    "@angular/cdk": "19.2.1",
+    "@angular/common": "19.2.0",
+    "@angular/compiler": "19.2.0",
+    "@angular/core": "19.2.0",
+    "@angular/forms": "19.2.0",
+    "@angular/platform-browser": "19.2.0",
+    "@angular/platform-browser-dynamic": "19.2.0",
+    "@angular/router": "19.2.0",
     "@capacitor/app": "7.0.0",
     "@capacitor/core": "7.0.1",
     "@capawesome/capacitor-file-picker": "7.0.1",
     "@ionic/angular": "8.4.3",
-    "@maskito/angular": "3.2.1",
-    "@maskito/core": "3.2.1",
+    "@maskito/angular": "3.3.0",
+    "@maskito/core": "3.3.0",
     "@ngx-translate/core": "16.0.4",
     "@ngx-translate/http-loader": "16.0.1",
     "@ngxs/form-plugin": "19.0.0",
     "@ngxs/logger-plugin": "19.0.0",
     "@ngxs/router-plugin": "19.0.0",
     "@ngxs/store": "19.0.0",
-    "@nx/angular": "20.4.3",
+    "@nx/angular": "20.4.6",
     "appwrite": "17.0.0",
     "ngx-translate-debug": "^0.1.4",
     "react": "19.0.0",
@@ -40,59 +40,59 @@
     "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.1.7",
-    "@angular-devkit/core": "19.1.7",
-    "@angular-devkit/schematics": "19.1.7",
-    "@angular-eslint/eslint-plugin": "19.1.0",
-    "@angular-eslint/eslint-plugin-template": "19.1.0",
-    "@angular-eslint/template-parser": "19.1.0",
-    "@angular/cli": "19.1.7",
-    "@angular/compiler-cli": "19.1.6",
-    "@angular/language-service": "19.1.6",
+    "@angular-devkit/build-angular": "19.2.0",
+    "@angular-devkit/core": "19.2.0",
+    "@angular-devkit/schematics": "19.2.0",
+    "@angular-eslint/eslint-plugin": "19.2.0",
+    "@angular-eslint/eslint-plugin-template": "19.2.0",
+    "@angular-eslint/template-parser": "19.2.0",
+    "@angular/cli": "19.2.0",
+    "@angular/compiler-cli": "19.2.0",
+    "@angular/language-service": "19.2.0",
     "@capacitor/cli": "7.0.1",
-    "@chromatic-com/storybook": "3.2.4",
+    "@chromatic-com/storybook": "3.2.5",
     "@compodoc/compodoc": "^1.1.24",
     "@ngxs/devtools-plugin": "19.0.0",
-    "@nx/cypress": "20.4.3",
-    "@nx/eslint": "20.4.3",
-    "@nx/eslint-plugin": "20.4.3",
-    "@nx/jest": "20.4.3",
-    "@nx/js": "20.4.3",
-    "@nx/storybook": "20.4.3",
-    "@nx/web": "20.4.3",
-    "@nx/workspace": "20.4.3",
-    "@schematics/angular": "19.1.7",
-    "@storybook/addon-essentials": "8.5.5",
-    "@storybook/addon-interactions": "8.5.5",
-    "@storybook/angular": "8.5.5",
-    "@storybook/core-server": "8.5.5",
-    "@storybook/test": "8.5.5",
-    "@storybook/test-runner": "0.21.0",
+    "@nx/cypress": "20.4.6",
+    "@nx/eslint": "20.4.6",
+    "@nx/eslint-plugin": "20.4.6",
+    "@nx/jest": "20.4.6",
+    "@nx/js": "20.4.6",
+    "@nx/storybook": "20.4.6",
+    "@nx/web": "20.4.6",
+    "@nx/workspace": "20.4.6",
+    "@schematics/angular": "19.2.0",
+    "@storybook/addon-essentials": "8.6.3",
+    "@storybook/addon-interactions": "8.6.3",
+    "@storybook/angular": "8.6.3",
+    "@storybook/core-server": "8.6.3",
+    "@storybook/test": "8.6.3",
+    "@storybook/test-runner": "0.22.0",
     "@swc-node/register": "1.10.9",
-    "@swc/core": "1.10.16",
+    "@swc/core": "1.11.7",
     "@types/jest": "29.5.14",
-    "@types/node": "22.13.2",
-    "@typescript-eslint/eslint-plugin": "8.24.0",
-    "@typescript-eslint/parser": "8.24.0",
-    "@typescript-eslint/utils": "8.24.0",
+    "@types/node": "22.13.9",
+    "@typescript-eslint/eslint-plugin": "8.26.0",
+    "@typescript-eslint/parser": "8.26.0",
+    "@typescript-eslint/utils": "8.26.0",
     "autoprefixer": "^10.4.0",
-    "cypress": "^13.0.3",
-    "eslint": "9.20.1",
-    "eslint-config-prettier": "^9",
+    "cypress": "13.17.0",
+    "eslint": "9.21.0",
+    "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "4.1.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "jest-preset-angular": "14.5.1",
+    "jest-preset-angular": "14.5.3",
     "jsonc-eslint-parser": "^2.1.0",
-    "ng-packagr": "19.1.2",
-    "nx": "20.4.3",
+    "ng-packagr": "19.2.0",
+    "nx": "20.4.6",
     "postcss": "^8.4.31",
     "postcss-import": "16.1.0",
-    "postcss-preset-env": "10.1.4",
+    "postcss-preset-env": "10.1.5",
     "postcss-url": "~10.1.3",
     "prettier": "^3.0.3",
-    "ts-jest": "29.2.5",
+    "ts-jest": "29.2.6",
     "ts-node": "10.9.2",
-    "typescript": "5.7.3"
+    "typescript": "5.8.2"
   }
 }
