--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@capacitor/core": "7.2.0",
     "@capawesome/capacitor-file-picker": "7.0.1",
     "@ionic/angular": "8.5.6",
+    "@ionic/core": "8.4.6",
     "@maskito/angular": "3.7.2",
     "@maskito/core": "3.7.2",
     "@ngx-translate/core": "16.0.4",
@@ -34,10 +35,10 @@
     "ngx-translate-debug": "^0.1.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "rxjs": "~7.8.1",
-    "storybook": "^8.2.8",
-    "swiper": "^11.0.1",
-    "tslib": "^2.6.2",
+    "rxjs": "~7.8.2",
+    "storybook": "^8.6.12",
+    "swiper": "^11.2.6",
+    "tslib": "^2.8.1",
     "zone.js": "0.15.0"
   },
   "devDependencies": {
@@ -47,12 +48,12 @@
     "@angular-eslint/eslint-plugin": "19.3.0",
     "@angular-eslint/eslint-plugin-template": "19.3.0",
     "@angular-eslint/template-parser": "19.3.0",
-    "@angular/cli": "~19.2.0",
+    "@angular/cli": "~19.2.10",
     "@angular/compiler-cli": "19.2.9",
     "@angular/language-service": "19.2.9",
     "@capacitor/cli": "7.2.0",
     "@chromatic-com/storybook": "3.2.6",
-    "@compodoc/compodoc": "^1.1.24",
+    "@compodoc/compodoc": "^1.1.26",
     "@ngxs/devtools-plugin": "19.0.0",
     "@nx/cypress": "20.8.1",
     "@nx/eslint": "20.8.1",
@@ -77,8 +78,8 @@
     "@typescript-eslint/eslint-plugin": "8.31.1",
     "@typescript-eslint/parser": "8.31.1",
     "@typescript-eslint/utils": "8.31.1",
-    "angular-eslint": "^19.2.0",
-    "autoprefixer": "^10.4.0",
+    "angular-eslint": "^19.3.0",
+    "autoprefixer": "^10.4.21",
     "cypress": "14.3.2",
     "eslint": "9.25.1",
     "eslint-config-prettier": "10.1.2",
@@ -86,18 +87,18 @@
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-preset-angular": "14.5.5",
-    "jsonc-eslint-parser": "^2.1.0",
+    "jsonc-eslint-parser": "^2.4.0",
     "ng-packagr": "19.2.2",
     "nx": "20.8.1",
-    "postcss": "^8.4.31",
+    "postcss": "^8.5.3",
     "postcss-import": "16.1.0",
     "postcss-preset-env": "10.1.6",
     "postcss-url": "~10.1.3",
-    "prettier": "^3.0.3",
+    "prettier": "^3.5.3",
     "ts-jest": "29.3.2",
     "ts-node": "10.9.2",
     "typescript": "5.8.3",
-    "verdaccio": "^6.0.5"
+    "verdaccio": "^6.1.2"
   },
   "nx": {
     "includedScripts": []
