--- a/package.json
+++ b/package.json
@@ -7,99 +7,99 @@
   "dependencies": {
     "@angular-ru/cdk": "18.10.0",
     "@angular-ru/ngxs": "18.10.0",
-    "@angular/animations": "19.2.9",
-    "@angular/cdk": "19.2.14",
-    "@angular/common": "19.2.9",
-    "@angular/compiler": "19.2.9",
-    "@angular/core": "19.2.9",
-    "@angular/forms": "19.2.9",
-    "@angular/platform-browser": "19.2.9",
-    "@angular/platform-browser-dynamic": "19.2.9",
-    "@angular/router": "19.2.9",
+    "@angular/animations": "19.2.11",
+    "@angular/cdk": "19.2.16",
+    "@angular/common": "19.2.11",
+    "@angular/compiler": "19.2.11",
+    "@angular/core": "19.2.11",
+    "@angular/forms": "19.2.11",
+    "@angular/platform-browser": "19.2.11",
+    "@angular/platform-browser-dynamic": "19.2.11",
+    "@angular/router": "19.2.11",
     "@capacitor/app": "7.0.1",
     "@capacitor/core": "7.2.0",
-    "@capawesome/capacitor-file-picker": "7.0.1",
-    "@ionic/angular": "8.5.6",
+    "@capawesome/capacitor-file-picker": "7.1.0",
+    "@ionic/angular": "8.5.7",
     "@ionic/core": "8.5.7",
-    "@maskito/angular": "3.7.2",
-    "@maskito/core": "3.7.2",
+    "@maskito/angular": "3.8.0",
+    "@maskito/core": "3.8.0",
     "@ngx-translate/core": "16.0.4",
     "@ngx-translate/http-loader": "16.0.1",
     "@ngxs/form-plugin": "19.0.0",
     "@ngxs/logger-plugin": "19.0.0",
     "@ngxs/router-plugin": "19.0.0",
     "@ngxs/store": "19.0.0",
-    "@nrwl/nx-cloud": "^19.1.0",
-    "@nx/angular": "21.0.2",
-    "appwrite": "17.0.2",
+    "@nrwl/nx-cloud": "19.1.0",
+    "@nx/angular": "21.0.3",
+    "appwrite": "18.0.0",
     "date-fns": "^4.1.0",
     "ionicons": "^8.0.8",
     "ngx-translate-debug": "^0.1.4",
     "rxjs": "~7.8.2",
-    "storybook": "^8.6.12",
+    "storybook": "^8.6.14",
     "swiper": "^11.2.6",
     "tslib": "^2.8.1",
     "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.2.10",
-    "@angular-devkit/core": "19.2.10",
-    "@angular-devkit/schematics": "19.2.10",
-    "@angular-eslint/eslint-plugin": "19.3.0",
-    "@angular-eslint/eslint-plugin-template": "19.3.0",
-    "@angular-eslint/template-parser": "19.3.0",
-    "@angular/cli": "~19.2.11",
-    "@angular/compiler-cli": "19.2.9",
-    "@angular/language-service": "19.2.9",
+    "@angular-devkit/build-angular": "19.2.12",
+    "@angular-devkit/core": "19.2.12",
+    "@angular-devkit/schematics": "19.2.12",
+    "@angular-eslint/eslint-plugin": "19.4.0",
+    "@angular-eslint/eslint-plugin-template": "19.4.0",
+    "@angular-eslint/template-parser": "19.4.0",
+    "@angular/cli": "~19.2.12",
+    "@angular/compiler-cli": "19.2.11",
+    "@angular/language-service": "19.2.11",
     "@capacitor/cli": "7.2.0",
     "@chromatic-com/storybook": "3.2.6",
     "@compodoc/compodoc": "^1.1.26",
-    "@eslint/eslintrc": "^2.1.1",
-    "@eslint/js": "~8.57.0",
+    "@eslint/eslintrc": "3.3.1",
+    "@eslint/js": "9.27.0",
     "@ngxs/devtools-plugin": "19.0.0",
-    "@nx/cypress": "21.0.2",
-    "@nx/eslint": "21.0.2",
-    "@nx/eslint-plugin": "21.0.2",
-    "@nx/jest": "21.0.2",
-    "@nx/js": "21.0.2",
-    "@nx/storybook": "21.0.2",
-    "@nx/web": "21.0.2",
-    "@nx/workspace": "21.0.2",
-    "@schematics/angular": "19.2.10",
-    "@storybook/addon-essentials": "8.6.12",
-    "@storybook/addon-interactions": "8.6.12",
-    "@storybook/angular": "8.6.12",
-    "@storybook/core-server": "8.6.12",
-    "@storybook/test": "8.6.12",
+    "@nx/cypress": "21.0.3",
+    "@nx/eslint": "21.0.3",
+    "@nx/eslint-plugin": "21.0.3",
+    "@nx/jest": "21.0.3",
+    "@nx/js": "21.0.3",
+    "@nx/storybook": "21.0.3",
+    "@nx/web": "21.0.3",
+    "@nx/workspace": "21.0.3",
+    "@schematics/angular": "19.2.12",
+    "@storybook/addon-essentials": "8.6.14",
+    "@storybook/addon-interactions": "8.6.14",
+    "@storybook/angular": "8.6.14",
+    "@storybook/core-server": "8.6.14",
+    "@storybook/test": "8.6.14",
     "@storybook/test-runner": "0.22.0",
     "@stylistic/eslint-plugin": "^4.2.0",
     "@swc-node/register": "1.10.10",
     "@swc/core": "1.11.24",
     "@swc/helpers": "0.5.17",
     "@types/jest": "29.5.14",
-    "@types/node": "22.15.3",
-    "@typescript-eslint/utils": "8.31.1",
-    "angular-eslint": "^19.3.0",
+    "@types/node": "22.15.19",
+    "@typescript-eslint/utils": "8.32.1",
+    "angular-eslint": "^19.4.0",
     "autoprefixer": "^10.4.21",
-    "cypress": "14.3.2",
-    "eslint": "9.25.1",
-    "eslint-config-prettier": "10.1.2",
+    "cypress": "14.3.3",
+    "eslint": "9.27.0",
+    "eslint-config-prettier": "10.1.5",
     "eslint-plugin-cypress": "4.3.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-preset-angular": "14.5.5",
     "jsonc-eslint-parser": "^2.4.0",
     "ng-packagr": "19.2.2",
-    "nx": "21.0.2",
+    "nx": "21.0.3",
     "postcss": "^8.5.3",
     "postcss-import": "16.1.0",
     "postcss-preset-env": "10.1.6",
     "postcss-url": "~10.1.3",
     "prettier": "^3.5.3",
-    "ts-jest": "29.3.2",
+    "ts-jest": "29.3.4",
     "ts-node": "10.9.2",
     "typescript": "5.8.3",
-    "typescript-eslint": "^8.19.0",
+    "typescript-eslint": "^8.32.1",
     "verdaccio": "^6.1.2"
   },
   "nx": {
