--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
   "dependencies": {
     "@angular-ru/cdk": "18.10.0",
     "@angular-ru/ngxs": "18.10.0",
-    "@angular/animations": "19.2.11",
-    "@angular/cdk": "19.2.16",
-    "@angular/common": "19.2.11",
-    "@angular/compiler": "19.2.11",
-    "@angular/core": "19.2.11",
-    "@angular/forms": "19.2.11",
-    "@angular/platform-browser": "19.2.11",
-    "@angular/platform-browser-dynamic": "19.2.11",
-    "@angular/router": "19.2.11",
+    "@angular/animations": "19.2.12",
+    "@angular/cdk": "19.2.17",
+    "@angular/common": "19.2.12",
+    "@angular/compiler": "19.2.12",
+    "@angular/core": "19.2.12",
+    "@angular/forms": "19.2.12",
+    "@angular/platform-browser": "19.2.12",
+    "@angular/platform-browser-dynamic": "19.2.12",
+    "@angular/router": "19.2.12",
     "@capacitor/app": "7.0.1",
     "@capacitor/core": "7.2.0",
     "@capawesome/capacitor-file-picker": "7.1.0",
@@ -30,8 +30,8 @@
     "@ngxs/router-plugin": "19.0.0",
     "@ngxs/store": "19.0.0",
     "@nrwl/nx-cloud": "19.1.0",
-    "@nx/angular": "21.1.0",
-    "appwrite": "18.0.0",
+    "@nx/angular": "21.1.1",
+    "appwrite": "18.1.1",
     "date-fns": "^4.1.0",
     "ionicons": "^8.0.8",
     "ngx-translate-debug": "^0.1.4",
@@ -42,30 +42,30 @@
     "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.2.12",
-    "@angular-devkit/core": "19.2.12",
-    "@angular-devkit/schematics": "19.2.12",
+    "@angular-devkit/build-angular": "19.2.13",
+    "@angular-devkit/core": "19.2.13",
+    "@angular-devkit/schematics": "19.2.13",
     "@angular-eslint/eslint-plugin": "19.4.0",
     "@angular-eslint/eslint-plugin-template": "19.4.0",
     "@angular-eslint/template-parser": "19.4.0",
-    "@angular/cli": "~19.2.12",
-    "@angular/compiler-cli": "19.2.11",
-    "@angular/language-service": "19.2.11",
+    "@angular/cli": "19.2.13",
+    "@angular/compiler-cli": "19.2.12",
+    "@angular/language-service": "19.2.12",
     "@capacitor/cli": "7.2.0",
     "@chromatic-com/storybook": "3.2.6",
     "@compodoc/compodoc": "^1.1.26",
     "@eslint/eslintrc": "3.3.1",
     "@eslint/js": "9.27.0",
     "@ngxs/devtools-plugin": "19.0.0",
-    "@nx/cypress": "21.1.0",
-    "@nx/eslint": "21.1.0",
-    "@nx/eslint-plugin": "21.1.0",
-    "@nx/jest": "21.1.0",
-    "@nx/js": "21.1.0",
-    "@nx/storybook": "21.1.0",
-    "@nx/web": "21.1.0",
-    "@nx/workspace": "21.1.0",
-    "@schematics/angular": "19.2.12",
+    "@nx/cypress": "21.1.1",
+    "@nx/eslint": "21.1.1",
+    "@nx/eslint-plugin": "21.1.1",
+    "@nx/jest": "21.1.1",
+    "@nx/js": "21.1.1",
+    "@nx/storybook": "21.1.1",
+    "@nx/web": "21.1.1",
+    "@nx/workspace": "21.1.1",
+    "@schematics/angular": "19.2.13",
     "@storybook/addon-essentials": "8.6.14",
     "@storybook/addon-interactions": "8.6.14",
     "@storybook/angular": "8.6.14",
@@ -74,14 +74,14 @@
     "@storybook/test-runner": "0.22.0",
     "@stylistic/eslint-plugin": "^4.2.0",
     "@swc-node/register": "1.10.10",
-    "@swc/core": "1.11.24",
+    "@swc/core": "1.11.29",
     "@swc/helpers": "0.5.17",
     "@types/jest": "29.5.14",
-    "@types/node": "22.15.19",
+    "@types/node": "22.15.21",
     "@typescript-eslint/utils": "8.32.1",
     "angular-eslint": "^19.4.0",
     "autoprefixer": "^10.4.21",
-    "cypress": "14.3.3",
+    "cypress": "14.4.0",
     "eslint": "9.27.0",
     "eslint-config-prettier": "10.1.5",
     "eslint-plugin-cypress": "4.3.0",
@@ -90,7 +90,7 @@
     "jest-preset-angular": "14.5.5",
     "jsonc-eslint-parser": "^2.4.0",
     "ng-packagr": "19.2.2",
-    "nx": "21.1.0",
+    "nx": "21.1.1",
     "postcss": "^8.5.3",
     "postcss-import": "16.1.0",
     "postcss-preset-env": "10.1.6",
