--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "appwrite": "18.1.1",
     "date-fns": "^4.1.0",
     "ionicons": "^8.0.8",
+    "ngx-moment": "^6.0.2",
     "ngx-translate-debug": "^0.1.4",
     "rxjs": "~7.8.2",
     "storybook": "^8.6.14",
